--- a/dot_config/alacritty/alacritty.yml
+++ b/dot_config/alacritty/alacritty.yml
@@ -1,7 +1,7 @@
 # vim:tabstop=2 shiftwidth=2
 
 import:
-  - .config/alacritty/themes/Builtin Tango Dark.yml
+  - .config/alacritty/themes/ayu.yml
 
 window:
   dimensions:
@@ -24,4 +24,4 @@ mouse:
     modifiers: Control
 
 draw_bold_text_with_bright_colors: false
-background_opacity: .99
+background_opacity: 1
