--- a/dot_config/waybar/config
+++ b/dot_config/waybar/config
@@ -40,7 +40,7 @@
   	"format": "{icon}",
     "max-legth": 10,
   	"icon-size": 14,
-  	"icon-theme": "Win10Sur-black-dark",
+  	"icon-theme": "Zorin-95",
   	"tooltip-format": "{title}",
   	"on-click": "activate",
   	"on-click-middle": "close"
