--- a/dot_config/tmux/tmux.conf
+++ b/dot_config/tmux/tmux.conf
@@ -40,21 +40,21 @@ bind-key -T copy-mode-vi y send-keys -X copy-selection-and-cancel
 # Plugins
 ###################
 
-set -g @plugin 'tmux-plugins/tpm'                   # Tmux Plugin Manager
-set -g @plugin 'tmux-plugins/tmux-sensible'         # Tmux pre configuration
-set -g @plugin 'tmux-plugins/tmux-resurrect'        # Restore sessions
+#set -g @plugin 'tmux-plugins/tpm'                   # Tmux Plugin Manager
+#set -g @plugin 'tmux-plugins/tmux-sensible'         # Tmux pre configuration
+#set -g @plugin 'tmux-plugins/tmux-resurrect'        # Restore sessions
 
-set -g @plugin 'tmux-plugins/tmux-prefix-highlight' # Display prefix at status bar
-set -g @plugin 'nhdaly/tmux-better-mouse-mode'      # Better mouse integration
+#set -g @plugin 'tmux-plugins/tmux-prefix-highlight' # Display prefix at status bar
+#set -g @plugin 'nhdaly/tmux-better-mouse-mode'      # Better mouse integration
 
-set -g @plugin 'tmux-plugins/tmux-open'             # Open files and urls
-set -g @plugin 'wfxr/tmux-fzf-url'                  # Easy url management with FZF
+#set -g @plugin 'tmux-plugins/tmux-open'             # Open files and urls
+#set -g @plugin 'wfxr/tmux-fzf-url'                  # Easy url management with FZF
 
-#set -g @plugin 'Determinant/tmux-colortag'
-set -g @plugin "arcticicestudio/nord-tmux"
-#set -g @plugin 'bliof/tmux-theme-minimal'
+##set -g @plugin 'Determinant/tmux-colortag'
+## set -g @plugin "arcticicestudio/nord-tmux"
+##set -g @plugin 'bliof/tmux-theme-minimal'
 
-run '~/.tmux/plugins/tpm/tpm'
+#run '~/.tmux/plugins/tpm/tpm'
 
 bind-key b set-option status
 
@@ -64,3 +64,16 @@ set -g pane-active-border-style fg=colour14
 
 # window mode
 setw -g mode-style "fg=colour0,bg=colour14"
+
+
+# status line
+set -g status-bg default
+set -g status-fg default
+
+set -g status on
+set -g status-justify centre
+set -g status-position bottom
+
+# info & colors
+#setw -g window-status-format "#T"
+#setw -g window-status-current-format "#T"
